Test/Bool/Comm.expected
goal: (f p q == f q p) = true

query:
(declare-fun f (Bool Bool) Bool)
(declare-const p Bool)
(declare-const q Bool)
(assert (not (= (= (f p q) (f q p)) true)))
(check-sat)

result: sat
Test/Bool/Comm.lean:4:2: error: unable to prove goal, it is false
